--- a/src/app/pages/orders/orders-list/orders-list.component.scss
+++ b/src/app/pages/orders/orders-list/orders-list.component.scss
@@ -5,18 +5,16 @@
 .slip-header-section {
     text-align: center;
 }
-// .slip-name {
-
-// }
-// .company-name {
-
-// }
-// .addr {
-
-// }
-// .gst-no {
-
-// }
+input[type="radio"] {
+    margin-right: 3px;
+}
+.search-container {
+    padding-bottom: 12px;
+}
+.padding-eater {
+    padding-left: 15px;
+    padding-bottom: 10px;
+}
 .order-section {
     border-top: 1px solid;
     border-bottom: 1px solid;
