--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -25,12 +25,16 @@
     padding-bottom: 5px;
 }
 .customer-name {
-    display: inline-block;
-    width: 65%;
+  display: inline-block;
+  width: 48%;
 }
 .phone-number {
-    display: inline-block;
-    width: 35%;
+  display: inline-block;
+  width: 34%;
+}
+.followup-date {
+  display: inline-block;
+  width: 18%;
 }
 .item-count-box {
     padding-bottom: 5px;
@@ -48,7 +52,7 @@
 }
 .box-middle {
     background-color: #fff;
-    padding: 10px 15px;
+    padding: 10px 0px;
     height: 200px;
     overflow-y: scroll;
 }
