--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -12,7 +12,7 @@
         <div class="col-sm-8">
           <input [formControl]="username" type="text" class="form-control" id="inputEmail3" placeholder="Username" required>
           <div *ngIf = "!username.valid && username.dirty" class="text-danger">
-            Please enter your username (Email is no longer valid to login).
+            Please enter your username.
 			    </div>
 		    </div>
       </div>
