--- a/src/app/pages/stock/create-stock/create-stock.component.scss
+++ b/src/app/pages/stock/create-stock/create-stock.component.scss
@@ -6,6 +6,11 @@ label {
   text-align: right;
   padding-right: 10px;
 }
+.input-value {
+  width: 56%;
+  text-align: center;
+  margin-top: 4px;
+}
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
@@ -130,29 +135,6 @@ input[type=number]::-webkit-outer-spin-button {
   border-left-color: transparent;
   left: 56%;
 }
-.search-container{
-  position: absolute;
-     max-height: 200px;
-     overflow-y: scroll;
-     width: calc(100%);
-     padding:0px;
-     border: 1px solid #ccc;
-     background: #fff;
-     z-index: 12;
-     .search-item{
-       padding: 6px 12px;
-       border-bottom: 1px solid #d6cccc;
-       cursor: pointer;
-       &:hover{
-         background: #5bc0de;
-         color:#fff;
-       }
- 
-     }
-     .search-item:last-child{
-        border-bottom: 0px solid #d6cccc;
-     }
- }
 
 // .search-container {
 //   position: absolute;
@@ -283,15 +265,6 @@ input[type=number]::-webkit-outer-spin-button {
 .space-between {
   padding-left: 5px;
   padding-right: 5px;
-}
-.input-width {
-  width: 8%;
-  display: inline-block;
-}
-.input-rate-width {
-  margin-top: 4px;
-  display: inline-block;
-  text-align: center;
 }
 .submit-create-order {
   position: absolute;
