--- a/src/app/pages/washing/create-washing/create-washing.component.html
+++ b/src/app/pages/washing/create-washing/create-washing.component.html
@@ -97,12 +97,12 @@
                 <input type='text' class='form-control' [disabled]="true" [(ngModel)]="createWashing.BalanceQty">
             </div>
         </div>
-        <!-- <div class="col-4">
+        <div class="col-4">
             <div class="form-group">
-                <label>No of days</label>
-                <input type='text' class='form-control' [disabled]="true" [(ngModel)]="createWashing.NoOfDays">
+                <label>Amount</label>
+                <input type='text' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createWashing.Amount">
             </div>
-        </div> -->
+        </div>
         <div class="col-4">
             <div class="form-group">
                 <label>Remark</label>
